# openGLTesting

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Renderer.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  build.sh  credits.txt  main.cpp
resources/shaders/: Rectangle.glsl  Texture2D.glsl  shader.glsl
src/: CMakeLists.txt  main.cpp
src/glStuff/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/tests/: ClearColor.cpp  ClearColor.hpp  Rectangle.cpp  Rectangle.hpp  Test.cpp  Test.hpp  Texture2D.cpp  Texture2D.hpp
